Fixed page content jump due to margin

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -2,7 +2,8 @@
 
 nav {
   display: flex;
-  margin: 1em auto;
+  margin: 0 auto;
+  padding: 1em 0;
   max-width: $mediumWidth;
 
   font-size: 1.75em;
